--- a/src/Finances.WinClient/Finances.WinClient.csproj
+++ b/src/Finances.WinClient/Finances.WinClient.csproj
@@ -63,7 +63,8 @@
     <SignManifests>false</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>Images\Money.ico</ApplicationIcon>
+    <ApplicationIcon>
+    </ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>false</SignAssembly>
@@ -296,6 +297,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="ResourceDictionaries\Brushes.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="ResourceDictionaries\Converters.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -303,6 +308,14 @@
     <Page Include="ResourceDictionaries\DataTemplates.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ResourceDictionaries\London Theme.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="ResourceDictionaries\Styles.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="ResourceDictionaries\Validation.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -483,9 +496,6 @@
     <Resource Include="Images\Money.bmp" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\Money.ico" />
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="Images\Money.png" />
   </ItemGroup>
   <ItemGroup>
@@ -516,6 +526,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\Conditions_5855.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Money.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\AutoMapper.3.2.1\tools\AutoMapper.targets" Condition="Exists('..\packages\AutoMapper.3.2.1\tools\AutoMapper.targets')" />
