--- a/src/Finances.WinClient/Finances.WinClient.csproj
+++ b/src/Finances.WinClient/Finances.WinClient.csproj
@@ -63,8 +63,7 @@
     <SignManifests>false</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>
-    </ApplicationIcon>
+    <ApplicationIcon>Images\Money.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>false</SignAssembly>
@@ -92,6 +91,7 @@
     <Reference Include="NHibernate">
       <HintPath>..\..\libs\NHibernate.3.3.3.4001\lib\Net35\NHibernate.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationFramework.Aero2" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
@@ -529,6 +529,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\Money.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Money_64.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\AutoMapper.3.2.1\tools\AutoMapper.targets" Condition="Exists('..\packages\AutoMapper.3.2.1\tools\AutoMapper.targets')" />
